Prevent double end session in DesktopSessionDurationTracker.

Previously, this scenario could cause the same session to end twice:
 - Chrome becomes visible.
 - User event -> Session starts.
 - Chrome becomes hidden -> Session ends.
 - Inactivity timeout expires -> Session ends again.

This CL fixes the issue by stopping the inactivity timer when a
session ends.

Bug: 863243
Change-Id: I3d903844ab07775ebc5d653f34fa6b91a3623021
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Reviewed-on: https://chromium-review.googlesource.com/1136725
Reviewed-by: Robert Kaplow (slow) <rkaplow@chromium.org>
Commit-Queue: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575021}
Former-commit-id: 0cecb37c6133edbb24836f56f8f56667051b9d79